rename rulebook examples

--- a/k8s-configmap-info.yaml
+++ b/k8s-configmap-info.yaml
@@ -1,5 +1,4 @@
-- hosts: localhost
-  connection: local
+- hosts: all
   tasks:
     - ansible.builtin.debug:
         msg: "ConfigMap in namespace '{{ event.resource.metadata.namespace }}' with name '{{ event.resource.metadata.name }} ‘{{ event.type | capitalize }}’ with the message ‘{{ event.resource.data.message}}'"
