--- a/k8s-configmap-info.yaml
+++ b/k8s-configmap-info.yaml
@@ -1,4 +1,4 @@
 - hosts: all
   tasks:
     - ansible.builtin.debug:
-        msg: "ConfigMap in namespace '{{ event.resource.metadata.namespace }}' with name '{{ event.resource.metadata.name }} ‘{{ event.type | capitalize }}’ with the message ‘{{ event.resource.data.message}}'"
+        msg: "ConfigMap in namespace '{{ ansible_eda.event.resource.metadata.namespace }}' with name '{{ ansible_eda.event.resource.metadata.name }} ‘{{ ansible_eda.event.type | capitalize }}’ with the message ‘{{ ansible_eda.event.resource.data.message}}'"
